--- a/style.css
+++ b/style.css
@@ -134,6 +134,10 @@ section.out {
     padding: 10px;
 }
 
+section.out > p {
+    text-align: center;
+}
+
 section.in {
     display: none;
     background-color: var(--cor5);
@@ -220,6 +224,10 @@ table {
     display: none;
 }
 
+table#m3 {
+    width: 500px;
+}
+
 tr {
     border-radius: 15px;
     
@@ -233,14 +241,26 @@ th, td {
     width: 100px;
 }
 
-th#m3 {
-    display: none;
+section#m2, section#m3 {
+    display: block;
 }
 
-#medicao > input {
-        max-width: 120px;
-    }
+section#m3 > input{
+    max-width: 150px;
+}
 
+
+
+
+ h3 {
+        color: var(--cor3);
+}
+
+div.container {
+    overflow: auto;
+}
+
+    
 
 
 @media screen and (min-width: 1500px) {
