--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ section.in {
     box-shadow: inset 5px 5px 5px var(--cor6);
 }
 
-.tela, .tela2, .tela15, .tela25{
+.tela, .tela2, .tela15, .tela25, .telaV2, .telaV0, .telaV1, .telaV3, .telaV4 {
     width: 60%;
     margin: auto;
     margin-top: 20px;
@@ -179,7 +179,14 @@ section.in {
     font-weight: bold;
 }
 
-.tela15, .tela25 {
+.telaV0 {
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px var(--cor6);
+    font-size: 1.5em;
+}
+
+.tela15, .tela25, .telaV1, .telaV3, .telaV4 {
     background-color: var(--cor3);
     color: var(--cor2);
     border-radius: 50px;
@@ -277,6 +284,13 @@ button#UN{
 div.container {
     overflow: auto;
 }
+
+input#valorGasto {
+    text-align: center;
+    font-size: 1.25em;
+    font-weight: bold;
+}
+
 
     
 
@@ -415,8 +429,6 @@ div.container {
     }
 
 
-
-
     select {
         font-size: 0.8em;
     }
@@ -455,7 +467,24 @@ div.container {
         max-width: 200px;
     }
 
-    .tela15, .tela25 {
+    input#valorGasto {
+        max-width: 100px;
+        text-align: center;
+    }
+
+    #resetV1, #resetV2 {
+        padding: 5px;
+        max-width: 80px;
+        font-size: 0.8em;
+    }
+
+    .telaV0 {
+        max-width: 100px;
+    }
+
+    
+
+    .tela15, .tela25, .telaV2, .telaV0, .telaV1, .telaV3, .telaV4 {
         font-size: 1.25em;
         margin-bottom: 10px;
         margin-top: 10px;
