--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ section#m2, section#m3 {
     display: block;
 }
 
-button#menosC2, button#menosC3, button#export2, button#export3, button#resetC2, button#resetC3, div.containerMedida, select#formatoEX, #ordenarM2 {
+button#menosC2, button#menosC3, button#export2, button#export3, button#resetC2, button#resetC3, div.containerMedida, select#formatoEX, #ordenarM2, #profund {
     display: none;
 }
 
@@ -368,6 +368,36 @@ button#virarDia {
     margin: auto;
 }
 
+    label.med {
+    display: inline-block;
+    width: 42%;
+    max-width: 500px;
+    margin: auto;
+    margin-bottom: 10px;
+    padding: 10.5px 2.6px;
+    background-color: var(--cor3);
+    color: var(--cor2);
+    border-radius: 15px 0 0 15px;
+    box-shadow: 5px 2.5px 5px 0 var(--cor6);
+    font-size: 1.25em;
+    font-weight: bold;
+    }
+
+select.med {
+    display: inline-block;
+    width: 42%;
+    max-width: 500px;
+    margin: auto;
+    margin-bottom: 10px;
+    padding: 10px 2.5px;
+    background-color: var(--cor3);
+    color: var(--cor2);
+    border-radius: 0 15px 15px 0;
+    box-shadow: 5px 2.5px 5px 0 var(--cor6);
+    font-size: 1.24em;
+    font-weight: normal;
+}
+
 
     
 
@@ -383,6 +413,15 @@ button#virarDia {
         width: 5.5%;
         vertical-align: -0.7vw;
     }
+
+    label.med {
+    transform: translateY(1px);
+    }
+
+    select.med {
+        
+        transform: translateY(1px);
+    }
     
 }
 
@@ -394,6 +433,14 @@ button#virarDia {
     header img {
         width: 5%;
         vertical-align: -0.8vw;
+    }
+
+    label.med {
+    transform: translateX(1px);
+    }
+
+    select.med {
+        transform: translateY(1px);
     }
     
 }
@@ -594,8 +641,19 @@ button#virarDia {
     #seletorDeArquivo {
         min-width: 300px;
     }
-    
+
+    label.med {
+        transform: translateY(-1px);
+    }
+
+
+    select.med {
+    font-size: 1.25em;
+    transform: translateX(-0.5px);
+    }
 }
+    
+
 
 @media screen and (max-width: 420px) {
     main {
@@ -657,6 +715,54 @@ button#virarDia {
 
     tfoot, tfoot {
     font-size: 1.05em;
+    }
+
+    label.med {
+    width: 40%;
+    max-width: 300px;
+    margin-bottom: 10px;
+    padding: 10.5px 2.6px;
+    border-radius: 15px 0 0 15px;
+    box-shadow: 5px 2.5px 5px 0 var(--cor6);
+    font-size: 1em;
+    transform: translateX(0.7px);
+    }
+
+    select.med {
+    display: inline-block;
+    width: 40%;
+    max-width: 300px;
+    margin-bottom: 10px;
+    padding: 10px 2.5px;
+    border-radius: 0 15px 15px 0;
+    box-shadow: 5px 2.5px 5px 0 var(--cor6);
+    font-size: 1em;
+    transform: translateY(0px);
+    }
+}
+
+@media screen and (max-width: 370px) {
+    label.med {
+    width: 37.5%;
+    max-width: 300px;
+    margin-bottom: 10px;
+    padding: 10.5px 2.6px;
+    border-radius: 15px 0 0 15px;
+    box-shadow: 5px 2.5px 5px 0 var(--cor6);
+    font-size: 0.9em;
+    transform: translateX(0.7px);
+    }
+
+    select.med {
+    display: inline-block;
+    width: 37.5%;
+    max-width: 300px;
+    margin-bottom: 10px;
+    padding: 10px 2.5px;
+    border-radius: 0 15px 15px 0;
+    box-shadow: 5px 2.5px 5px 0 var(--cor6);
+    font-size: 0.9em;
+    transform: translateY(2px);
     }
 }
 
