--- a/style.css
+++ b/style.css
@@ -368,13 +368,14 @@ button#virarDia {
     margin: auto;
 }
 
+div.labelB{
+    display: flex;
+    align-items: center;
+}
+
 label.med {
-    display: inline-block;
-    width: 42%;
-    max-width: 500px;
-    margin: auto;
-    margin-bottom: 10px;
-    padding: 10.5px 2.6px;
+    flex: 1;
+    padding: 10px 2.5px;
     background-color: var(--cor3);
     color: var(--cor2);
     border-radius: 15px 0 0 15px;
@@ -384,11 +385,7 @@ label.med {
 }
 
 select.med {
-    display: inline-block;
-    width: 42%;
-    max-width: 500px;
-    margin: auto;
-    margin-bottom: 10px;
+    flex: 1;
     padding: 10px 2.5px;
     background-color: var(--cor3);
     color: var(--cor2);
@@ -640,18 +637,11 @@ select#formatoEX {
     }
 
     label.med {
-    width: 45%;
-    height: 19px;
     font-size: 1.15em;
     }
 
     select.med {
-    width: 45%;
-    height: 40px;
     font-size: 1.15em;
-    position: relative;
-    top: 0.7px;
-    left: -0.2px;
     }
 
     #export2 {
@@ -739,17 +729,11 @@ select#formatoEX {
     }
 
     label.med {
-    width: 45%;
-    border-radius: 15px 0 0 15px;
     font-size: 1em;
     }
 
     select.med {
-    width: 45%;
-    border-radius: 0 15px 15px 0;
     font-size: 1em;
-    position: relative;
-    top: 0px;
     }
 
     select#formatoEX {
@@ -778,22 +762,11 @@ select#formatoEX {
 
 @media screen and (max-width: 370px) {
     label.med {
-    width: 45%;
-    margin-bottom: 10px;
-    padding: 10.5px 2.6px;
-    box-shadow: 5px 2.5px 5px 0 var(--cor6);
     font-size: 0.9em;
     }
 
     select.med {
-    display: inline-block;
-    width: 45%;
-    margin-bottom: 10px;
-    padding: 10px 2.5px;
-    box-shadow: 5px 2.5px 5px 0 var(--cor6);
     font-size: 0.9em;
-    position: relative;
-    top: 2px;
     }
 }
 
