--- a/style.css
+++ b/style.css
@@ -786,14 +786,16 @@ select#formatoEX {
     }
 
     label.med {
-    font-size: 1.25em;
+    font-size: 1.2em;
     }
+
 
     select.med {
     font-size: 1em;
     }
 
     div.labelB {
+        width: 98%;
         margin-bottom: 10px;
     }
 
