--- a/style.css
+++ b/style.css
@@ -736,7 +736,15 @@ section#m2 input {
         padding: 20px 10px;
     }
 
+
+    label.med {
+    font-size: 1.2em;
+    }
+    select.med {
+    font-size: 1em;
+    }
     div.labelB {
+        width: 98%;
         margin-bottom: 10px;
     }
 
@@ -750,8 +758,6 @@ section#m2 input {
         padding: 15px 0px;
         margin-left: 5px;
     }
-
-
 }
     
 
@@ -814,17 +820,13 @@ section#m2 input {
     }
 
     label.med {
-    font-size: 1.2em;
+    font-size: 1.1em;
     }
-
-
     select.med {
-    font-size: 1em;
+    font-size: 0.9em;
     }
-
     div.labelB {
-        width: 98%;
-        margin-bottom: 10px;
+    width: 98%;
     }
 
 
@@ -871,11 +873,11 @@ section#m2 input {
 
 @media screen and (max-width: 370px) {
     label.med {
-    font-size: 1.1em;
+    font-size: 1em;
     }
 
     select.med {
-    font-size: 0.9em;
+    font-size: 0.8em;
     }
 
     div.labelB {
