--- a/style.css
+++ b/style.css
@@ -369,6 +369,8 @@ div.containerNome {
 
 div.container2 {
     overflow: auto;
+    margin-left: 1.5px;
+    margin-right: 1.5px;
 }
 
 #containerM0 {
@@ -507,7 +509,7 @@ div.containerNome > label {
 div.containerNome > input {
     padding: 0;
     height: 0;
-    min-width: 50vw;
+    min-width: 40vw;
     text-align: center;
     background-color: var(--cor2);
     font-size: 0.9em;
@@ -620,7 +622,7 @@ section#m2 input {
     }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 750px) {
 
     body {
         font-size: 18px;
