--- a/medicao.css
+++ b/medicao.css
@@ -28,9 +28,13 @@ select {
 }
 
 h3 {
-    background-color: var(--cor2);
     border-radius: 15px;
     margin: 15px;
+    text-align: center;
+}
+
+h3.edicao {
+    background-color: var(--cor2);
     display: none;
 }
 
@@ -40,4 +44,15 @@ tr > button {
     font-size: 0.75em;
     padding: 0px 5px;
     height: 0;
+}
+
+p.intro {
+    margin: 0 100px;
+    font-size: 0.9em;
+}
+
+@media screen and (max-width: 750px) {
+    p.intro {
+        margin: 0 20px;
+    }
 }
